--- a/android/build.gradle
+++ b/android/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.20'
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 def configureReactNativePom(def pom) {
