--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,8 +74,8 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     // Room
-    implementation "android.arch.persistence.room:runtime:2.1.0-alpha06"
-    annotationProcessor "android.arch.persistence.room:compiler:2.1.0-alpha06"
+    implementation "android.arch.persistence.room:runtime:2.4.0"
+    annotationProcessor "android.arch.persistence.room:compiler:2.4.0"
     // 压缩解压
     implementation 'org.apache.commons:commons-compress:1.20'
     // okhttp
